re #47 - Prevent wrap

--- a/_scss/_misc/_setup.scss
+++ b/_scss/_misc/_setup.scss
@@ -72,3 +72,7 @@ blockquote p {
 .text--center {
   text-align: center;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
